@@ -94,6 +94,10 @@ Version 1.7.8
        without an error being shown. (Stefan)
 - BUG: Issue #372: log dialog refresh does
        not refresh merged info. (Stefan)
+- BUG: Issue #373: Right-clicking on files ceases
+       to function in Commit dialog on occasion. (Stefan)
+- BUG: Issue #376: Incorrect checkbox selection
+       in Repo browser. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
